--- a/style.css
+++ b/style.css
@@ -4,11 +4,10 @@
     list-style: none;
     text-decoration: none;
     box-sizing: border-box;
-   
+
 }
 
 body {
-   
     min-height: 100vh;
     width: 100%;
     position: relative;
@@ -33,15 +32,15 @@ body {
     cursor: pointer;
 }
 
-.button1:hover{
+.button1:hover {
     background: none;
     color: rgb(8, 8, 8);
     border: 1px solid black;
 }
 
 
-@media (max-width:770px){
-    .wrapper{
+@media (max-width:770px) {
+    .wrapper {
         padding: 20px;
     }
 }
@@ -63,7 +62,7 @@ nav {
 }
 
 .logo {
-    color:#020202;
+    color: #020202;
 
 }
 
@@ -82,7 +81,7 @@ nav {
 }
 
 .navlist ul li a {
-    color:rgb(189, 182, 182);
+    color: rgb(189, 182, 182);
     padding: 0 15px;
 }
 
@@ -91,8 +90,8 @@ nav {
 
 /* =================================== MAIN BODY ============================= */
 
-.header{
-    min-height: 100vh;
+.header {
+    min-height: 90vh;
     width: 100%;
     background-image: url(images/cta.jpg);
     background-size: cover;
@@ -100,36 +99,37 @@ nav {
     position: relative;
 }
 
-.text-box{
+
+.text-box {
     width: 90%;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50% ,-50%);
+    transform: translate(-50%, -50%);
     color: #0e0d0d;
     text-align: center;
 }
 
-.text-box h1{
+.text-box h1 {
     font-size: 61px;
 }
 
 
-.text-box p{
+.text-box p {
     margin: 10px 0 40px;
 }
 
 /* =========================== MAIN-BODY-END ==================== */
 
 /* =================== cources ================================= */
-.wrapper{
+.wrapper {
     margin: 10px auto;
     padding: 0 10%;
     padding-bottom: 10px;
     margin-top: 100px;
 }
 
-.wrapper h1{
+.wrapper h1 {
     font-size: 40px;
     color: #555;
     font-size: 45px;
@@ -140,22 +140,27 @@ nav {
 
 }
 
-@media (max-width:700px){
-    .wrapper h1{
-        font-size: 30px;
+@media (max-width:700px) {
+    .wrapper h1 {
+        font-size: 25px;
     }
-    .text-box h1{
-        font-size: 40px;
+
+    .text-box h1 {
+        font-size: 25px;
+    }
+
+    .header {
+        min-height: 70vh;
     }
 }
 
-
-.container{
+.container {
     display: grid;
     gap: 2em;
-    grid-template-columns: repeat(auto-fit, minmax(270px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
 }
-.box{
+
+.box {
     border-radius: 5px;
     background: #fff;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
@@ -163,18 +168,19 @@ nav {
     border-radius: 5px;
 }
 
-.box img{
+.box img {
     width: 100%;
     height: 240px;
 }
 
-.box h1{
+.box h1 {
     color: #444;
     padding: 10px 0;
     font-size: 20px;
 
 }
-.box p{
+
+.box p {
     color: #a19f9f;
     margin-top: 8px;
 }
@@ -269,12 +275,14 @@ nav {
     margin-top: 50px;
 }
 
-.cta h1{
+.cta h1 {
     font-size: 25px;
 }
 
-@media (max-width:700px){
-    .cta h1{font-size: 20px;}
+@media (max-width:700px) {
+    .cta h1 {
+        font-size: 20px;
+    }
 }
 
 .cta a {
@@ -331,28 +339,69 @@ footer h4 {
 .location iframe {
     width: 100%;
 }
-.row{
+
+.row {
     display: flex;
     margin-top: 5%;
     justify-content: space-between;
 }
 
 
-@media (max-width:700px){
-    .row{
-        display: block;
+@media (max-width:700px) {
+    .contact-row{
+        flex-direction: column;
+
     
     }
+    .row{
+       display: block};
+
+
+        }
+    
+ 
+.contact-row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
 
 }
 
+.contact-row .col{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+   width: 100%;
+}
+ .col-info h1{
+    color: #0e0d0d;
+ }
+.col-info p{
+    color: #ccc;
+    margin: 2px 0;
+}
+ .col-info strong{
+    color: #535252;
+ }
+ 
+.col img{
+    width: 400px;
+}
+.contact-container{
+    width: 100%;
+    margin: auto;
+}
+/* ============================contact ======================================== */
 
-.contact-us{
+
+
+.contact-us {
     width: 80%;
     margin: auto;
 }
 
-.contact-col{
+.contact-col {
     flex-basis: 48%;
     margin-bottom: 30px;
 }
@@ -374,7 +423,7 @@ footer h4 {
 }
 
 .contact-col div h5 {
-    font-size: 20px;
+    font-size: 18px;
     margin-bottom: 5px;
     color: #555;
 }
@@ -389,69 +438,56 @@ footer h4 {
     box-sizing: border-box;
 }
 
-.background2 img {
-    background-size: cover;
-    background-position: center;
-    margin-top: 50px;
-    width: 100%;
-    height: 60vh;
-}
 
-.background2 h2 {
-    font-size: 40px;
-    color: #ee1515;
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translateX(-50%);
-}
+
 
 /* ===================================slider====================== */
 
-.image-container{
+.image-container {
     display: flex;
     height: 100vh;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-background: linear-gradient(rgb(96, 200, 204),white);
 }
 
-.image-slider{
+.image-slider {
     position: relative;
-    height: 500px;
-    width: 800px;
+    height: 32em;
+    width: 50em;
     margin: 10px;
 
 }
 
-.image-slider .slide{
+.image-slider .slide {
     z-index: 1;
     position: absolute;
     width: 100%;
     clip-path: circle(0% at 0 50%);
- 
+
 }
 
 
-.image-slider .slide.active{
+.image-slider .slide.active {
     clip-path: circle(150% at 0 50%);
     transition: 1s;
     transition-property: clip-path;
 }
- .image-slider .navigation .btn.active{
+
+.image-slider .navigation .btn.active {
     background: rgb(101, 225, 241);
     box-shadow: 0 0 2px rgba(255, 0, 0, 0.5);
- }
+}
 
 
-.image-slider .slide img{
+.image-slider .slide img {
     width: 100%;
     z-index: 1;
     border-radius: 5px;
 
 }
-.image-slider .navigation{
+
+.image-slider .navigation {
     display: flex;
     z-index: 2;
     position: absolute;
@@ -459,7 +495,8 @@ background: linear-gradient(rgb(96, 200, 204),white);
     left: 50%;
     transform: translateX(-50%);
 }
-.image-slider .navigation .btn{
+
+.image-slider .navigation .btn {
     background: #fff;
     width: 12px;
     height: 12px;
@@ -469,29 +506,37 @@ background: linear-gradient(rgb(96, 200, 204),white);
 }
 
 
-@media(max-width:700px){
-    .image-slider{
+@media(max-width:700px) {
+
+    .image-slider {
         width: 600px;
         height: 375px;
     }
 
-    .image-slider .navigation{
+    .image-slider .navigation {
         bottom: 15px;
     }
 
-    .image-slider .navigation .btn{
+    .image-slider .navigation .btn {
         width: 10px;
         height: 10px;
         margin: 8px;
     }
-    .mission ol{
-       flex-direction: column;
+
+    .mission ol {
+        flex-direction: column;
     }
-   .mission .aim{
-    width: 400px;
-    height: 400px;
-   }
+
+    .mission .aim {
+        width: 400px;
+        height: 400px;
+    }
+    .image-container {
+
+        height: 60vh;
     
+    }
+
 }
 
 
@@ -499,33 +544,35 @@ background: linear-gradient(rgb(96, 200, 204),white);
 
 
 .mission {
-    width: 90%;
+    width: 100%;
     margin: auto;
-    margin-top: 50px;
+    margin-top: 70px;
     margin-bottom: 30px;
+    padding: 0 10px;
 }
 
- 
+
 .mission h1 {
-    color:  rgb(60, 236, 192);
+    color: rgb(60, 236, 192);
     display: inline-block;
     font-size: 30px;
 
 }
-.head{
+
+.head {
     width: 80%;
     margin: auto;
     text-align: center;
     margin-bottom: 50px;
 }
- 
-.mission ol{
-   display: flex;
-   gap: .2;
-overflow: hidden;
+
+.mission ol {
+    display: flex;
+    gap: .2;
+    overflow: hidden;
 }
 
-.mission .aim img{
+.mission .aim img {
     height: 300px;
     width: 300px;
 }
@@ -539,7 +586,8 @@ strong {
     font-size: 16px;
     color: black;
 }
-.mission ol li{
+
+.mission ol li {
     color: #a19f9f;
 }
 
@@ -547,30 +595,31 @@ strong {
     width: 100%;
     margin-top: 70px;
     text-align: center;
-    background: linear-gradient(white,rgb(236, 232, 232));
-    height:550px ;
-   
+    height: 550px;
+
 
 }
 
-.staff .staff-row h3{
+.staff .staff-row h3 {
     font-size: 25px;
     margin-top: 15px;
-    color:rgb(7, 20, 77);
+    color: rgb(7, 20, 77);
 }
 
-.staff .staff-row p{
-    color:rgb(165, 165, 165);
+.staff .staff-row p {
+    color: rgb(165, 165, 165);
     font-size: 20px;
 }
-.personal-info{
+
+.personal-info {
     background: white;
 }
+
 .staff h2 {
     margin-top: 20px;
     margin-bottom: 20px;
     font-size: 20px;
-    color:  rgb(60, 236, 192);
+    color: rgb(60, 236, 192);
 }
 
 .staff-row {
@@ -601,39 +650,31 @@ strong {
 
     }
 
-    .blur {
-        background: none;
-        height: 100vh;
-        width: 80%;
-        ;
-    }
-
-    .slide img {
-        width: 80%;
-        height: 60vh;
-    }
-
 
 }
 
 
 
 
-.staff h2{
+.slide img {
+    width: 80%;
+    height: 60vh;
+}
+
+.staff h2 {
     font-size: 40px;
     margin-bottom: 30px;
 
 }
 
-  
-  .slide img{
+.slide img {
     width: 800px;
     height: 500px;
-  }
+}
 
-  @media (max-width:700px){
-    .slide img{
-        width:400 px;
-        height:400px;
-      }
-  }
+@media (max-width:700px) {
+    .slide img {
+        width: 400 px;
+        height: 400px;
+    }
+}
